@@ -26,6 +26,10 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  With --Wall, add INCABSPATH warning on `include with absolute paths.
 
+***  With --Wall, add UNDRIVEN warning on undriven nets.
+
+***  With --Wall, add UNUSED warning on unused nets.
+
 ***  The VARHIDDEN warning is now disabled by default, use -Wall to enable.
 
 * Verilator 3.805 2010/11/02
